[gd_scene load_steps=45 format=2]

[ext_resource path="res://PlayerResources/pengu.png" type="Texture" id=1]
[ext_resource path="res://Sprinkles.shader" type="Shader" id=2]
[ext_resource path="res://EmperorPenguin_PublicDomain.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://BG.shader" type="Shader" id=5]
[ext_resource path="res://water.shader" type="Shader" id=6]
[ext_resource path="res://Line2D.gd" type="Script" id=7]
[ext_resource path="res://PlayerResources/scripts/Player.gd" type="Script" id=11]
[ext_resource path="res://PlayerResources/Buttons/PS4.png" type="Texture" id=12]
[ext_resource path="res://new_convexpolygonshape2d.tres" type="Shape2D" id=13]
[ext_resource path="res://PlayerResources/RightShape.tres" type="Shape2D" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/color = Vector3( 1, 0.9, 0.3 )
shader_param/OCTAVES = 4

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/color = Vector3( 0.3, 0, 0.7 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 10, -5, 10, 15, 0, 15, -10, 15, -10, -5, 0, -20 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( -15, -10, -15, 0, -15, 10, 5, 10, 20, 0, 5, -10 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 10, 5, 10, -15, 0, -15, -10, -15, -10, 5, 0, 20 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 40, 40, 80, 0 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "RightWalk",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "LeftWalk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=31]
radius = 21.977
height = 6.07984

[sub_resource type="ShaderMaterial" id=32]
shader = ExtResource( 6 )
shader_param/color = Vector3( 0.35, 0.48, 0.95 )
shader_param/xscale = null
shader_param/yscale = null

[sub_resource type="ArrayMesh" id=33]
surfaces/0 = {
"aabb": AABB( -32, -32, 0, 64, 64, 0 ),
"array_data": PoolByteArray( 0, 0, 0, 66, 0, 0, 0, 194, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 66, 0, 0, 0, 66, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 194, 0, 0, 0, 66, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 194, 0, 0, 0, 194, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 248, 65, 0, 0, 0, 194, 0, 0, 124, 63, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 4, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 1, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 9,
"material": SubResource( 32 ),
"name": "This",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 5
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( -1.41425, -1.41422 )
texture = ExtResource( 3 )

[node name="Xbutton" type="TouchScreenButton" parent="."]
position = Vector2( 265, 100 )
scale = Vector2( 2, 2 )
normal = SubResource( 3 )
shape = SubResource( 4 )

[node name="Squarebutton" type="TouchScreenButton" parent="."]
position = Vector2( 240, 75 )
scale = Vector2( 2, 2 )
normal = SubResource( 5 )
shape = SubResource( 4 )

[node name="Trianglebutton" type="TouchScreenButton" parent="."]
position = Vector2( 265, 50 )
scale = Vector2( 2, 2 )
normal = SubResource( 6 )
shape = SubResource( 4 )

[node name="Circlebutton" type="TouchScreenButton" parent="."]
position = Vector2( 290, 75 )
scale = Vector2( 2, 2 )
normal = SubResource( 7 )
shape = SubResource( 4 )

[node name="DPAD" type="Node2D" parent="."]
position = Vector2( -300, 50 )

[node name="Sprite" type="AnimatedSprite" parent="DPAD"]
show_behind_parent = true
position = Vector2( 40, 40 )
scale = Vector2( 5, 5 )
frames = SubResource( 16 )
animation = "right"

[node name="DownArr" type="TouchScreenButton" parent="DPAD"]
position = Vector2( 40, 65 )
shape = SubResource( 17 )
shape_centered = false

[node name="LeftArr" type="TouchScreenButton" parent="DPAD"]
position = Vector2( 15, 40 )
shape = SubResource( 18 )
shape_centered = false

[node name="UpArr" type="TouchScreenButton" parent="DPAD"]
position = Vector2( 40, 15 )
shape = SubResource( 19 )
shape_centered = false

[node name="RightArr" type="TouchScreenButton" parent="DPAD"]
position = Vector2( 65, 40 )
shape = ExtResource( 14 )
shape_centered = false

[node name="Area2D" type="Area2D" parent="DPAD"]
gravity = 0.0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DPAD/Area2D"]
shape = SubResource( 20 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( 80, 0 )
rotation = 1.5708
shape = SubResource( 20 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( 80, 80 )
rotation = 3.14159
shape = SubResource( 20 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( 0, 80 )
rotation = 4.71239
shape = SubResource( 20 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( 40, -10 )
rotation = 3.14159
shape = ExtResource( 13 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( 90, 40 )
rotation = 4.71239
shape = ExtResource( 13 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( 40, 90 )
shape = ExtResource( 13 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="DPAD/Area2D"]
position = Vector2( -10, 40 )
rotation = 1.5708
shape = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 30 )
animation = "idle"
playing = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
collision_mask = 4
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 31 )

[node name="EnergyBar" type="Node2D" parent="."]

[node name="Sprite" type="MeshInstance2D" parent="EnergyBar"]
visible = false
position = Vector2( -306.304, -100.294 )
scale = Vector2( 0.57, 0.171 )
mesh = SubResource( 33 )
texture = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="EnergyBar"]
position = Vector2( -306.462, -37.8632 )
scale = Vector2( 3.68, 1.48 )
points = PoolVector2Array( 0, -45, 0, 30 )
script = ExtResource( 7 )

[node name="Line2D" type="Line2D" parent="EnergyBar/Line2D"]
position = Vector2( 0.090683, -2.93124 )
points = PoolVector2Array( 0, 38.953, 0, 33.09 )
default_color = Color( 0.992157, 1, 0, 1 )

[node name="HealthBar" type="Node2D" parent="."]

[node name="Sprite" type="MeshInstance2D" parent="HealthBar"]
visible = false
position = Vector2( -306.304, -100.294 )
scale = Vector2( 0.57, 0.171 )
mesh = SubResource( 33 )
texture = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="HealthBar"]
position = Vector2( -171.327, -165.22 )
rotation = -1.5708
scale = Vector2( 2.76724, 1.72229 )
points = PoolVector2Array( 0, -45, 0, 30 )
default_color = Color( 0, 0.859375, 1, 1 )
script = ExtResource( 7 )

[node name="Line2D" type="Line2D" parent="HealthBar/Line2D"]
position = Vector2( 0.852417, -2.20135 )
points = PoolVector2Array( -0.859634, -42.539, -0.859634, -44.7139 )
default_color = Color( 0.654902, 0.054902, 0.054902, 1 )
[connection signal="pressed" from="Xbutton" to="." method="_on_Xbutton_pressed"]
[connection signal="input_event" from="DPAD/Area2D" to="." method="_on_Area2D_input_event"]
